2011-05-10  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Taper/Scribe.pm: Call $device->finish() before
	  $device->read_label(), A device must be in ACCESS_NULL for read_label.

2011-05-05  Jean-Louis Martineau <martineau@zmanda.com>
	* ReleaseNotes, NEWS: Add changes for 3.2.3
	* VERSION: 3.2.3

2011-05-05  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/conffile.c: Do not crash on unterminated quoted string.

2011-05-05  Jean-Louis Martineau <martineau@zmanda.com>
	* application-src/amzfs-sendrecv.pl: Implement restore.
	  Generate index with only '/'.
	* perl/Amanda/Application/Zfs.pm: Add $self->{filesystem} on some
	  command, improve zfs_build_snapshotname.
	* server-src/list_dir.c (add_dir_list_item): Check if same dump.

2011-05-05  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/local-security.c: Call initgroups before executing amandad

2011-05-05  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/driver.c: Do not count dup to tape when checking space
	  on holdingdisk.

2011-04-29  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/driver.c: Reply immediately a NO_NEW_TAPE if taper ask
	  REQUEST_NEW_TAPE after it is in TAPER_STATE_DONE.

2011-04-27  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Device.swg: Do not crash if an unknown device-property
	  is set.

2011-04-20  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/planner.c: Improve balancing if some dle have strategy
	  noinc or a smaller dumpcycle.

2011-04-19  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Changer.pm: new changer error: empty.
	* perl/Amanda/Changer/robot.pm: return empty slot.
	* perl/Amanda/Taper/Scan/traditional.pm: Handle empty slot.

2011-04-11  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/DB/Catalog.pm: Parse negative kb and orig-kb.
	* perl/Amanda/Logfile.swg: Do not write negative orig-kb.

2011-04-06  Jean-Louis Martineau <martineau@zmanda.com>