@@ -108,6 +108,12 @@ client-custom-compressed tapes.</para>
 </variablelist>
 </refsect1>
 
+<refsect1><title>AUTH</title>
+<para>The default <emphasis remap='B'>auth</emphasis> is 'BSD', you can set
+a different auth in the <emphasis remap='B'>amanda-client.conf</emphasis> file
+or by specifying the '-oauth=bsdtcp' command line argument.</para>
+</refsect1>
+
 <refsect1><title>COMMANDS</title>
 <para><emphasis remap='B'>Amrecover</emphasis>
 connects to the index server and then presents a command line prompt.
